--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -15,11 +15,11 @@ footer {
     }
 }
 
-.footer-links {
+.textwidget {
     width: 123px;
 }
 
-.footer-links p:last-child {
+.textwidget p:last-child {
     margin-bottom: 0;
 }
 
@@ -28,6 +28,10 @@ footer {
     // width: 65%;
     display: flex;
     align-items: flex-end;
+}
+
+.footer-widget {
+    display: flex;
 }
 
 .facebook {
@@ -50,10 +54,17 @@ footer {
 .copywrite {
     text-align: center;
     padding: 0 5%;
+    p{
+        margin-bottom: 25px;
+    }
 }
 
 
 @media all and (min-width: $desktop-view) {
+
+.textwidget {
+    display: flex;
+}
 
 .site-info {
     padding: 0 5%;
@@ -66,7 +77,7 @@ footer {
     }
 }
 
-.footer-links {
+.textwidget {
     width: 60%;
     display: flex;
     flex-direction: row;
