--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -229,136 +229,136 @@ th {
 # Embedded Fonts
 --------------------------------------------------------------*/
 @font-face {
-  font-family: 'latoblack';
+  font-family: 'lato';
   src: url("../../assets/fonts/lato-black-webfont.eot");
   src: url("../../assets/fonts/lato-black-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-black-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-black-webfont.woff") format("woff"), url("../../assets/fonts/lato-black-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-black-webfont.svg#latoblack") format("svg");
-  font-weight: normal;
+  font-weight: bolder;
   font-style: normal; }
 
 @font-face {
-  font-family: 'latoblack';
+  font-family: 'lato';
   src: url("../../assets/fonts/lato-blackitalic-webfont.eot");
   src: url("../../assets/fonts/lato-blackitalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-blackitalic-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-blackitalic-webfont.woff") format("woff"), url("../../assets/fonts/lato-blackitalic-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-blackitalic-webfont.svg#latoblack_italic") format("svg");
-  font-weight: normal;
+  font-weight: bolder;
   font-style: italic; }
 
 @font-face {
-  font-family: 'latobold';
+  font-family: 'lato';
   src: url("../../assets/fonts/lato-bold-webfont.eot");
   src: url("../../assets/fonts/lato-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-bold-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-bold-webfont.woff") format("woff"), url("../../assets/fonts/lato-bold-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-bold-webfont.svg#latobold") format("svg");
-  font-weight: normal;
+  font-weight: bold;
   font-style: normal; }
 
 @font-face {
-  font-family: 'latobold';
+  font-family: 'lato';
   src: url("../../assets/fonts/lato-bolditalic-webfont.eot");
   src: url("../../assets/fonts/lato-bolditalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-bolditalic-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-bolditalic-webfont.woff") format("woff"), url("../../assets/fonts/lato-bolditalic-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-bolditalic-webfont.svg#latobold_italic") format("svg");
-  font-weight: normal;
+  font-weight: bold;
   font-style: italic; }
 
 @font-face {
-  font-family: 'latohairline';
+  font-family: 'lato';
   src: url("../../assets/fonts/lato-hairline-webfont.eot");
   src: url("../../assets/fonts/lato-hairline-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-hairline-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-hairline-webfont.woff") format("woff"), url("../../assets/fonts/lato-hairline-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-hairline-webfont.svg#latohairline") format("svg");
-  font-weight: normal;
+  font-weight: 100;
   font-style: normal; }
 
 @font-face {
-  font-family: 'latohairline';
+  font-family: 'lato';
   src: url("../../assets/fonts/lato-hairlineitalic-webfont.eot");
   src: url("../../assets/fonts/lato-hairlineitalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-hairlineitalic-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-hairlineitalic-webfont.woff") format("woff"), url("../../assets/fonts/lato-hairlineitalic-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-hairlineitalic-webfont.svg#latohairline_italic") format("svg");
-  font-weight: normal;
+  font-weight: 100;
   font-style: italic; }
 
 @font-face {
-  font-family: 'latoitalic';
+  font-family: 'lato';
   src: url("../../assets/fonts/lato-italic-webfont.eot");
   src: url("../../assets/fonts/lato-italic-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-italic-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-italic-webfont.woff") format("woff"), url("../../assets/fonts/lato-italic-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-italic-webfont.svg#latoitalic") format("svg");
   font-weight: normal;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'latolight';
-  src: url("../../assets/fonts/lato-light-webfont.eot");
-  src: url("../../assets/fonts/lato-light-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-light-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-light-webfont.woff") format("woff"), url("../../assets/fonts/lato-light-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-light-webfont.svg#latolight") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'latolight';
-  src: url("../../assets/fonts/lato-lightitalic-webfont.eot");
-  src: url("../../assets/fonts/lato-lightitalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-lightitalic-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-lightitalic-webfont.woff") format("woff"), url("../../assets/fonts/lato-lightitalic-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-lightitalic-webfont.svg#latolight_italic") format("svg");
-  font-weight: normal;
   font-style: italic; }
 
 @font-face {
-  font-family: 'latoregular';
+  font-family: 'lato';
+  src: url("../../assets/fonts/lato-light-webfont.eot");
+  src: url("../../assets/fonts/lato-light-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-light-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-light-webfont.woff") format("woff"), url("../../assets/fonts/lato-light-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-light-webfont.svg#latolight") format("svg");
+  font-weight: lighter;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'lato';
+  src: url("../../assets/fonts/lato-lightitalic-webfont.eot");
+  src: url("../../assets/fonts/lato-lightitalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-lightitalic-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-lightitalic-webfont.woff") format("woff"), url("../../assets/fonts/lato-lightitalic-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-lightitalic-webfont.svg#latolight_italic") format("svg");
+  font-weight: lighter;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'lato';
   src: url("../../assets/fonts/lato-regular-webfont.eot");
   src: url("../../assets/fonts/lato-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/lato-regular-webfont.woff2") format("woff2"), url("../../assets/fonts/lato-regular-webfont.woff") format("woff"), url("../../assets/fonts/lato-regular-webfont.ttf") format("truetype"), url("../../assets/fonts/lato-regular-webfont.svg#latoregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: 'montserratblack';
+  font-family: 'montserrat';
   src: url("../../assets/fonts/montserrat-black-webfont.eot");
   src: url("../../assets/fonts/montserrat-black-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-black-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-black-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-black-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-black-webfont.svg#montserratblack") format("svg");
-  font-weight: normal;
+  font-weight: 900;
   font-style: normal; }
 
 @font-face {
   font-family: 'montserratbold';
   src: url("../../assets/fonts/montserrat-bold-webfont.eot");
   src: url("../../assets/fonts/montserrat-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-bold-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-bold-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-bold-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-bold-webfont.svg#montserratbold") format("svg");
-  font-weight: normal;
+  font-weight: bold;
   font-style: normal; }
 
 @font-face {
   font-family: 'montserratextrabold';
   src: url("../../assets/fonts/montserrat-extrabold-webfont.eot");
   src: url("../../assets/fonts/montserrat-extrabold-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-extrabold-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-extrabold-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-extrabold-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-extrabold-webfont.svg#montserratextrabold") format("svg");
-  font-weight: normal;
+  font-weight: 800;
   font-style: normal; }
 
 @font-face {
-  font-family: 'montserratextralight';
+  font-family: 'montserrat';
   src: url("../../assets/fonts/montserrat-extralight-webfont.eot");
   src: url("../../assets/fonts/montserrat-extralight-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-extralight-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-extralight-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-extralight-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-extralight-webfont.svg#montserratextralight") format("svg");
-  font-weight: normal;
+  font-weight: 200;
   font-style: normal; }
 
 @font-face {
-  font-family: 'montserratlight';
+  font-family: 'montserrat';
   src: url("../../assets/fonts/montserrat-light-webfont.eot");
   src: url("../../assets/fonts/montserrat-light-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-light-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-light-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-light-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-light-webfont.svg#montserratlight") format("svg");
-  font-weight: normal;
+  font-weight: 300;
   font-style: normal; }
 
 @font-face {
-  font-family: 'montserratmedium';
+  font-family: 'montserrat';
   src: url("../../assets/fonts/montserrat-medium-webfont.eot");
   src: url("../../assets/fonts/montserrat-medium-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-medium-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-medium-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-medium-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-medium-webfont.svg#montserratmedium") format("svg");
-  font-weight: normal;
+  font-weight: 500;
   font-style: normal; }
 
 @font-face {
-  font-family: 'montserratregular';
+  font-family: 'montserrat';
   src: url("../../assets/fonts/montserrat-regular-webfont.eot");
   src: url("../../assets/fonts/montserrat-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-regular-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-regular-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-regular-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-regular-webfont.svg#montserratregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: 'montserratsemibold';
+  font-family: 'montserrat';
   src: url("../../assets/fonts/montserrat-semibold-webfont.eot");
   src: url("../../assets/fonts/montserrat-semibold-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-semibold-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-semibold-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-semibold-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-semibold-webfont.svg#montserratsemibold") format("svg");
-  font-weight: normal;
+  font-weight: 600;
   font-style: normal; }
 
 @font-face {
-  font-family: 'montserratthin';
+  font-family: 'montserrat';
   src: url("../../assets/fonts/montserrat-thin-webfont.eot");
   src: url("../../assets/fonts/montserrat-thin-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-thin-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-thin-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-thin-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-thin-webfont.svg#montserratthin") format("svg");
-  font-weight: normal;
+  font-weight: 100;
   font-style: normal; }
 
 /*--------------------------------------------------------------
@@ -1280,10 +1280,10 @@ footer {
   .site-info:hover {
     color: #f5a623; }
 
-.footer-links {
+.textwidget {
   width: 123px; }
 
-.footer-links p:last-child {
+.textwidget p:last-child {
   margin-bottom: 0; }
 
 .footer-icons {
@@ -1291,6 +1291,10 @@ footer {
   display: flex;
   -ms-flex-align: end;
       align-items: flex-end; }
+
+.footer-widget {
+  display: -ms-flexbox;
+  display: flex; }
 
 .facebook {
   background-image: url("../../assets/images/facebook-circle-sm.svg");
@@ -1310,8 +1314,13 @@ footer {
 .copywrite {
   text-align: center;
   padding: 0 5%; }
+  .copywrite p {
+    margin-bottom: 25px; }
 
 @media all and (min-width: 600px) {
+  .textwidget {
+    display: -ms-flexbox;
+    display: flex; }
   .site-info {
     padding: 0 5%;
     margin: auto;
@@ -1322,7 +1331,7 @@ footer {
     color: #000000; }
     .site-info:hover {
       color: #f5a623; }
-  .footer-links {
+  .textwidget {
     width: 60%;
     display: -ms-flexbox;
     display: flex;
@@ -1331,7 +1340,7 @@ footer {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     min-width: 526px; }
-    .footer-links p {
+    .textwidget p {
       width: 175px;
       margin: 0; }
   .footer-icons {
