--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -6,11 +6,9 @@
       display: flex;
       justify-content: center;
       .site-main {
+        width: $d_width;
         display: flex;
         flex-flow: column nowrap;
-        justify-content: center;
-        align-items: center;
-        width: $d-width;
         article {
           margin: 0;
         }
@@ -30,6 +28,7 @@
             width: 100%;
             @media screen and (min-width: $mobile_width) {
               height: 386px;
+              position: absolute;
             }
           }
           .front-learn {
@@ -58,7 +57,8 @@
           width: 100%;
           @media screen and (min-width: $mobile_width) {
             display: flex;
-            justify-content: space-around;
+            padding: 32px;
+            justify-content: space-between;
           }
           .front-program,
           .front-events,
@@ -80,10 +80,6 @@
               display: flex;
               justify-content: center;
               align-items: center;
-              @media screen and (min-width: $mobile_width) {
-                justify-content: flex-start;
-                padding-left: 60px;
-              }
             }
             @include hover-state {
               border: $p_border 4px;
@@ -93,6 +89,7 @@
             @include m-button;
             p {
               display: none;
+              padding: 0 60px;
             }
             @media screen and (min-width: $mobile_width) {
               width: 544px;
@@ -101,21 +98,32 @@
               p {
                 display: flex;
               }
+              a {
+                padding-left: 60px;
+                justify-content: flex-start;
+              }
             }
           }
-          .front-events {
-            background: $blue;
+          .intro-event-blog {
             @media screen and (min-width: $mobile_width) {
-              width: 383px;
-              height: 129px;
+              display: flex;
+              justify-content: space-between;
+              flex-flow: column nowrap;
             }
-          }
-          .front-blog {
-            background: $white;
-            @media screen and (min-width: $mobile_width) {
-              width: 383px;
-              height: 129px;
+            .front-events {
               background: $blue;
+              @media screen and (min-width: $mobile_width) {
+                width: 383px;
+                height: 129px;
+              }
+            }
+            .front-blog {
+              background: $white;
+              @media screen and (min-width: $mobile_width) {
+                width: 383px;
+                height: 129px;
+                background: $blue;
+              }
             }
           }
         }
