add scss mixin desktip button padding

--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -37,6 +37,7 @@
         }
         @media screen and (min-width: $mobile_width) {
           display: flex;
+          padding: $d_padding;
         }
       }
     }
