set variables, fixed fonts

--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -17,6 +17,8 @@ footer {
 
 .textwidget {
     width: 123px;
+    font-family: $font__body;
+    font-size: $font_d-sub-body;
 }
 
 .textwidget p:last-child {
@@ -56,6 +58,8 @@ footer {
     padding: 0 5%;
     p{
         margin-bottom: 25px;
+        font-family: $font__body;
+        font-size: 14px;
     }
 }
 
