--- a/themes/sgsc/sass/_variables.scss
+++ b/themes/sgsc/sass/_variables.scss
@@ -14,18 +14,18 @@ $blue: #45cdcb;
 $pink: #F91E72;
 // Typography
 $font__header: montserrat;
-$font__main: lato;
+$font__body: lato;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 //desktop font size
-$font__header: 40px;
-$font__sub-header: 36px;
-$font__body: 24px;
-$font__sub-body: 18px;
+$font_d-h1: 40px;
+$font_d-h2: 36px;
+$font_d-body: 24px;
+$font_d-sub-body: 18px;
 //mobile font size
-$font__m-header: 22px;
-$font__m-sub-header: 16px;
-$font__m-body: 12px;
+$font_m-h1: 22px;
+$font_m-h2: 16px;
+$font_m-body: 12px;
 //button
 $m_padding: .3rem 1.5rem;
 $d_padding: .4rem 3rem;
