--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -59,6 +59,9 @@
       bottom: 0;
       right: 0;
       z-index: 3;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       a {
         text-decoration: none;
         color: $black;
@@ -74,9 +77,11 @@
         }
       }
       @media screen and (min-width: $mobile_width) {
+        height: 73px;
+        width: 224px;
         a {
           i {
-            font-size: $font__body;
+            font-size: 40px;
           }
           p {
             display: initial;
