--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -86,6 +86,7 @@
             }
           }
           .front-program {
+            border: $p_border 4px $orange;
             @include m-button;
             p {
               display: none;
@@ -111,6 +112,7 @@
               flex-flow: column nowrap;
             }
             .front-events {
+              border: $p_border 4px $blue;
               background: $blue;
               @media screen and (min-width: $mobile_width) {
                 width: 383px;
@@ -118,6 +120,7 @@
               }
             }
             .front-blog {
+              border: $p_border 4px $white;
               background: $white;
               @media screen and (min-width: $mobile_width) {
                 width: 383px;
@@ -169,6 +172,7 @@
           justify-content: center;
           align-items: center;
           width: 100%;
+          border: $p_border 4px $white;
           @include hover-state {
             border: $p_border 4px;
           }
@@ -195,6 +199,7 @@
         background: $blue;
         height: 138px;
         width: 100%;
+        border: $p_border 4px $blue;
         @media screen and (min-width: $mobile_width) {
           height: 386px;
         }
