updated footer to show correct breakpoint for mobile.

--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -61,7 +61,7 @@ footer {
 }
 
 
-@media all and (min-width: $desktop-view) {
+@media all and (min-width: $mobile_width) {
 
 .textwidget {
     display: flex;
@@ -79,7 +79,6 @@ footer {
 }
 
 .textwidget {
-    // width: 60%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
